# compose-ndk

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/me/kifio/stringsparser/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  stringsparser.cpp
app/src/main/java/me/kifio/stringsparser/: MainActivity.kt
app/src/main/java/me/kifio/stringsparser/data/: LocalRepository.kt
app/src/main/java/me/kifio/stringsparser/domain/: CancelFiltrationStringsUseCase.kt  GetFilteredStringsUseCase.kt
app/src/main/java/me/kifio/stringsparser/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/me/kifio/stringsparser/ui/view/: StringsParserView.kt  StringsParserViewModel.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/me/kifio/stringsparser/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
